# Predict-Customer-Churn

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/lgbm_baseline/: metadata.json
notebooks/: 01_EDA.ipynb  02_feature_engineering.ipynb  03_model.ipynb
src/: cv.py  predict.py  preprocess.py  train.py
