[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "predict_customer_churn"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Ryuto Murakami" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["predict_customer_churn"]
include = ["pyproject.toml", "predict_customer_churn/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["predict_customer_churn"]
force-sort-within-sections = true

